fixed category not showing correctly

--- a/frontend/src/components/Inventory/Inventory.css
+++ b/frontend/src/components/Inventory/Inventory.css
@@ -201,6 +201,8 @@
     border-radius: 5px;
     padding: 1px 3px;
     border: none;
+
+    transition: 0.3s ease;
 }
 
 .custom-select i {
